--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "index.mjs",
   "types": "index.d.ts",
   "scripts": {
-    "build": "tsup && cp package.json ./dist && cp README.md ./dist"
+    "build": "tsup && cp package.json ./dist && cp README.md ./dist",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -28,9 +29,17 @@
   "devDependencies": {
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.5.2",
+    "@vitest/browser": "^3.2.3",
+    "jsdom": "^26.1.0",
+    "playwright": "^1.53.0",
+    "react-dom": "^19.1.0",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1"
+    "typescript-eslint": "^8.34.1",
+    "vitest": "^3.2.3",
+    "vitest-browser-react": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^19.1.0"
