--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup && cp package.json ./dist && cp README.md ./dist",
     "test": "vitest",
     "lint": "eslint .",
-    "test:dev": "vitest --watch"
+    "test:dev": "vitest --ui --watch --coverage.enabled=true",
+    "coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,9 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
-    "@vitest/browser": "^3.2.3",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-istanbul": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -44,7 +47,7 @@
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vitest": "^3.2.3",
+    "vitest": "^3.2.4",
     "vitest-browser-react": "^0.3.0"
   },
   "peerDependencies": {
